--- a/5장/28_배열보다는_리스트를_사용하라.md
+++ b/5장/28_배열보다는_리스트를_사용하라.md
@@ -61,9 +61,70 @@ String s = stringLists[0].get(0);                   //(5)
 - 소거 메커니즘 때문에 매개변수화 타입 가운데 실체화 될 수 있는 타입은 List<?>와 Map<?,?> 같은 비한정적 와일드카드 타입 뿐이다. (아이템26)
 - 배열을 비한정적 와일드카드 타입으로 만들 수는 있지만, 유용하게 쓰일 일은 거의 없다.
 
-> @SafeVarargs
-
 > 배열로 형변환 시, 제네릭 배열 생성 오류나 비검사 형변환 경고가 뜨는 경우, 배열인 E[] 대신 컬렉션인 List<E>를 사용하면 해결된다.
+
+- Chooser 클래스를 사용하려면 choose 메서드를 호출할 때마다, 반환된 Object를 원하는 타입으로 형변환해야 한다.
+- 타입이 다른 원소가 들어 있다면 런타임에 형변환 오류가 날 것이다.
+~~~java
+public class Chooser {
+    private final Object[] choiceArray;
+    
+    public Chooser(Collection choices) {
+        this.choiceArray = choices.toArray();
+    }
+    
+    // 이 메서드를 사용하는 곳에서는 매번 형변환이 필요하다.
+    // 형변환 오류의 가능성이 있다.
+    public Object choose() {
+        Random rnd = ThreadLocalRandom.current();
+        return choiceArray[rnd.nextInt(choiceArray.length)];
+    }
+}
+~~~
+
+- 제네릭으로 만든다.
+
+~~~java
+public class Chooser<T> {
+    private final T[] choiceArray;
+
+    public Chooser(Collection<T> choices) {
+        // 오류 발생 incompatible types: java.lang.Object[] cannot be converted to T[]
+        this.choiceArray = choices.toArray();
+    }
+
+    // choose 메소드는 동일하다.
+}
+~~~
+
+- incompatible types 오류는 아래와 같이 코드를 변경하면 해결된다.
+
+~~~java
+// Object 배열을 T 배열로 형변환다 한.
+this.choiceArray = (T[]) choices.toArray();
+~~~
+
+- Unchecked Cast 경고가 발생한다.
+- 제네릭에서 원소의 타입 정보가 소거되어 런타임에는 무슨 타입인지 알 수 없다.
+- 그래서 T가 무슨 타입인지 알 수 없으니 컴파일러는 이 형변환이 런타임에도 안전을 보장할 수 없다는 경고이다.
+
+"비검사 형변환 경고를 제거하려면 배열 대신 리스트를 사용한다."
+
+~~~java
+class Chooser<T> {
+    private final List<T> choiceList;
+
+    public Chooser(Collection<T> choices) {
+        this.choiceList = new ArrayList<>(choices);
+    }
+
+    public T choose() {
+        Random rnd = ThreadLocalRandom.current();
+        return choiceList.get(rnd.nextInt(choiceList.size()));
+    }
+}
+~~~
+- 런타임에 ClassCastException이 발생하지 않는다.
 
 > 핵심정리 | 배열은 공변이고 실체화되는 반면, 제네릭은 불공변이고 타입 정보가 소거된다.
 > 배열은 런타임에는 타입이 안전하지만 컴파일타임에는 그렇지 않고, 제네릭은 이 반대다.
